--- a/package.json
+++ b/package.json
@@ -10,8 +10,13 @@
     "@types/node": "^12.12.47",
     "@types/react": "^16.9.41",
     "@types/react-dom": "^16.9.8",
+    "axios": "^0.19.2",
+    "bootstrap": "^4.5.0",
+    "js-cookie": "^2.2.1",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "typescript": "^3.7.5"
   },
